Fixed a bug where pagemcontainer overlapped nav-icons

--- a/css/style.less
+++ b/css/style.less
@@ -976,7 +976,7 @@
   div.pagemcontainer {
     position:fixed; top:0; left:0; z-index:1000;
     text-align:center;
-    width:100%; min-width:960px;
+    width:100%; min-width:960px; height:1px;
     
     p {
       display:inline-block;
